[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btech-agent-lab"
version = "1.15.0"
description = "Cloud-native LLM Agent Development and Testing Toolkit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bruno Sant'Anna", email = "mail@bsantanna.me" }]
keywords = ["llm", "agents", "langchain", "langgraph", "fastapi", "mcp", "rag", "ai", "simulation", "testing", "framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "browser-use",
    "charset-normalizer~=3.4.7",
    "ddgs~=9.14.4",
    "dependency-injector~=4.48.3",
    "fastapi-keycloak-middleware~=1.6.0",
    "fastmcp~=3.4.4",
    "fastapi[standard]~=0.139.0",
    "hvac~=2.4.0",
    "icalendar~=7.1.0",
    "jinja2~=3.1.6",
    "langchain~=1.3.13",
    "langchain-anthropic~=1.4.8",
    "langchain-community~=0.4.1",
    "langchain-core~=1.4.9",
    "langchain-experimental~=0.4.1",
    "langchain-openai~=1.2.1",
    "langchain-postgres~=0.0.16",
    "langchain-text-splitters~=1.1.2",
    "langchain-xai~=1.2.2",
    "langgraph~=1.2.9",
    "langgraph-checkpoint-postgres~=3.0.5",
    "langgraph-prebuilt~=1.1.0",
    "langwatch~=0.26.0",
    "langwatch-scenario~=0.7.26",
    "litellm~=1.84.0",
    "markitdown[all]~=0.1.5",
    "msal~=1.37.0",
    "opentelemetry-api~=1.40.0",
    "opentelemetry-exporter-otlp-proto-http~=1.40.0",
    "opentelemetry-instrumentation-fastapi~=0.61b0",
    "opentelemetry-instrumentation-httpx~=0.61b0",
    "opentelemetry-instrumentation-langchain~=0.60.0",
    "opentelemetry-instrumentation-psycopg~=0.61b0",
    "opentelemetry-instrumentation-psycopg2~=0.61b0",
    "opentelemetry-instrumentation-sqlalchemy~=0.61b0",
    "opentelemetry-sdk~=1.40.0",
    "psutil~=7.2.2",
    "psycopg-binary~=3.3.4",
    "psycopg-pool~=3.3.1",
    "psycopg2-binary~=2.9.12",
    "pydantic~=2.13.4",
    "pyyaml~=6.0.3",
    "redis~=8.0.1",
    "requests~=2.33.1",
    "slowapi~=0.1.9",
    "sqlalchemy~=2.0.51",
    "starlette~=1.3.1",
    "typing_extensions~=4.16.0",
    "uvicorn~=0.51.0",
    "ipykernel>=7.3.0",
]

[project.urls]
Homepage = "https://github.com/btech-software/agent-lab"
Repository = "https://github.com/btech-software/agent-lab"
Documentation = "https://github.com/btech-software/agent-lab/tree/main/doc"
Changelog = "https://github.com/btech-software/agent-lab/blob/main/CHANGELOG.md"
Issues = "https://github.com/btech-software/agent-lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_lab"]

[tool.hatch.build.targets.sdist]
include = [
    "agent_lab",
    "README.md",
]

[dependency-groups]
dev = [
    "pre-commit~=4.6.0",
    "ruff~=0.15.10",
]
test = [
    "cookiecutter>=2.6,<2.8",
    "langfuse>=4.14.0",
    "pytest~=9.0.3",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.1.0",
    "pytest-timeout~=2.4.0",
    "testcontainers[elasticsearch]~=4.14.2",
    "testcontainers[keycloak]~=4.14.2",
    "testcontainers[ollama]~=4.14.2",
    "testcontainers[postgres]~=4.14.2",
    "testcontainers[redis]~=4.14.2",
    "testcontainers[vault]~=4.14.2",
]
notebooks = [
    "IPython",
    "nest_asyncio",
    "pyppeteer",
    "python-dotenv",
    "ipykernel>=7.3.0",
]

[tool.semantic_release]
build_command = "uv lock && git add uv.lock"
version_variables = [
    "cookiecutter/cookiecutter.json:agent_lab_version",
    "docker/app/Dockerfile:SERVICE_VERSION",
    "charts/agent-lab/Chart.yaml:version",
    "charts/agent-lab/Chart.yaml:appVersion",
    "terraform/16_agent-lab-instance/variables.tf:default",
    "pyproject.toml:version",
]

[tool.coverage.report]
fail_under = 90

[tool.ruff]
# cookiecutter/ payload files contain Jinja and are not valid Python before
# rendering; the baked output is ruff-checked in tests/template instead.
extend-exclude = ["notebooks", "cookiecutter"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E501"]
